# WeaponDetection

./: .gitignore  STUFF_TO_DO.md  demo.py  list_of_detectors.md  metadata.json  providers.py  requirements.txt  utils.py
cpp_api/: CMakeLists.txt  install_onnxruntime.sh
cpp_api/src/: CMakeLists.txt  main.cpp
cpp_api/src/ObjectDetection/: CMakeLists.txt
cpp_api/src/ObjectDetection/include/: YOLOXDetector.h
cpp_api/src/ObjectDetection/src/: YOLOXDetector.cpp
cpp_api/src/common/: CMakeLists.txt
cpp_api/src/common/include/: BaseModel.hpp  SessionBuilder.hpp
cpp_api/src/common/src/: BaseModel.cpp  SessionBuilder.cpp
models/: base.py  functions.py  yolo_nas.py  yolox.py
tools/: media_processor.py  utils.py
training/yolo_nas/: README.md  export_onnx.py  requirements.txt  train.py
training/yolox/: README.md  yolox_s.py
training/yolox/utils/: prepare_for_conversion.py
